--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet build Scheduler.WebApi/Scheduler.WebApi.csproj --configuration Release --no-restore
 
     - name: 🚀 Publish app
-      run: dotnet publish Scheduler.WebApi/Scheduler.WebApi.csproj --configuration Release --output ./publish --no-restore
+      run: dotnet publish Scheduler.WebApi/Scheduler.WebApi.csproj --configuration Release --output ./publish --no-restore --no-build
 
     - name: ☁️ Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
