--- a/Scheduler.WebApi/appsettings.json
+++ b/Scheduler.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MeetingSettings": {
+    "BaseUrl": "https://localhost:7272"
+  }
 }
